add pull request

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>this is a cloned repo on cohort assignment</h1>
+    <h2>this is for creating a pull request</h2>
 </body>
 </html>
